Hopefully fixed bug with overflow.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -469,3 +469,7 @@ hr {
     font-size: 20px;
     margin-bottom: -40px;
 }
+
+body {
+    overflow-x:hidden;
+}
